--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -15,8 +15,8 @@
     "activities": "Activities",
     "hour": "Hour",
     "valueCripto" : "Quotation" ,
-    "nominal":"Nominal amount",
-    "amountArs": "Amount of the operation in ARG pesos",
+    "nominal":"Nominals",
+    "amountArs": "Amount of the operation",
     "user": "User",
     "operations": "Operations",
     "operationsNull": "No operations",
@@ -34,8 +34,27 @@
     "waitUser":"Waiting for user",
     "amountNegociate":"Amount to negotiate",
     "nameAndLastName":"Name and lastname",
-    "notify":"Notificar envio", 
+    "notify":"Notify shipment", 
     "addrW":"Address wallet",
     "releaseCripto":"Release cryptocurrency",
-    "cancelT":"Cancel Transaction"
+    "cancelT":"Cancel Transaction",
+    "wantCancelT": "Do you want cancel the transaction?",
+    "yesCancel":"Yes,cancel",
+    "continueT":"Continue transaction",
+    "creatingActivity": "Creating activity",
+    "successfullyActivity": "Activity created successfully",
+    "errorCreateActivity":"An error occurred at create activity",
+    "createNewActivity":"Create new Activity",
+    "actualQuotation": "Actual Quotation",
+    "operationType":"Operation type",
+    "ticker":"Ticker",
+    "createA":"Create",
+    "cancel":"Cancel",
+    "checkSendAmount":"Send amount, check bank account",
+    "foundUserT": "User found to negociate",
+    "cancelledT":"Has been cancelled the transaction",
+    "backQuotations": "Back to quotations",
+    "transactionSuccessfully" :"Transaction was completed successfully"
+    
+   
 }
